fix: issue where dropdown menu overflows screen

--- a/frontend/src/components/pageLayout/dropDownMenu/dropDownMenu.css
+++ b/frontend/src/components/pageLayout/dropDownMenu/dropDownMenu.css
@@ -7,7 +7,7 @@
     background-color: var(--secondary-color);
     padding: .5rem;
     width: 300px;
-    max-width: 100%;
+    max-width: calc(100% - 2rem);
     border-radius: 5px;
     opacity: 0;
     transition-duration: .1s;
